; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_netapp.c_netapp_ping_stop.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_netapp.c_netapp_ping_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@EFAIL = common dso_local global i32 0, align 4
@tSLInformation = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@HCI_NETAPP_PING_STOP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @netapp_ping_stop() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @EFAIL, align 4
  store i32 %3, i32* %1, align 4
  %4 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 0), align 8
  store i32* %4, i32** %2, align 8
  %5 = load i32, i32* @HCI_NETAPP_PING_STOP, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @hci_command_send(i32 %5, i32* %6, i32 0)
  %8 = load i32, i32* @HCI_NETAPP_PING_STOP, align 4
  %9 = call i32 @SimpleLinkWaitEvent(i32 %8, i32* %1)
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @hci_command_send(i32, i32*, i32) #1

declare dso_local i32 @SimpleLinkWaitEvent(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
